Remove kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,2 +1,3 @@
-map f1 launch --cwd=current
-map f2 launch --cwd=current --type=tab
+# map CTRL+f1 launch --cwd=current
+# map CTRL+f2 launch --cwd=current --type=tab
+# map CTRL+f3 close_window
