+ and - for kitty tabs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,2 @@
-# map CTRL+f1 launch --cwd=current
-# map CTRL+f2 launch --cwd=current --type=tab
-# map CTRL+f3 close_window
+map ctrl+shift+= launch --cwd=current
+map ctrl+shift+- close_window
