--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,3 +4,9 @@ map ctrl+shift+- close_window
 map f11 toggle_fullscreen
 
 background_opacity 0.98
+
+
+# BEGIN_KITTY_THEME
+# Snazzy
+include current-theme.conf
+# END_KITTY_THEME
