--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,46 +1,46 @@
-# snazzy by Connor Holyday <connorholyday@gmail.com> (holyday.me)
-# This work is licensed under the terms of the MIT license.
-# For a copy, see https://opensource.org/licenses/MIT.
+# vim:ft=kitty
 
-# Snazzy Colorscheme for Kitty
-# Based on https://github.com/sindresorhus/hyper-snazzy
+## name: Campbell
+## author: Microsoft
+## blurb: The default theme of Microsoft's terminals, including Windows Terminal and cmd.
 
-foreground            #eff0eb
-background            #282a36
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #97979B
-cursor_text_color     #282A36
+# The basic colors
+foreground                      #cccccc
+background                      #0c0c0c
+selection_background            #ffffff
 
+# Cursor colors
+cursor                          #ffffff
+
+# The basic 16 colors
 # black
-color0   #282a36
-color8   #686868
+color0 #0c0c0c
+color8 #767676
 
 # red
-color1   #FF5C57
-color9   #FF5C57
+color1 #c50f1f
+color9 #e74856
 
 # green
-color2   #5AF78E
-color10  #5AF78E
+color2  #13a10e
+color10 #16c60c
 
 # yellow
-color3   #F3F99D
-color11  #F3F99D
+color3  #f19c00
+color11 #f9f1a5
 
 # blue
-color4  #57C7FF
-color12 #57C7FF
+color4  #0037da
+color12 #3b78ff
 
 # magenta
-color5   #FF6AC1
-color13  #FF6AC1
+color5  #881798
+color13 #b4009e
 
 # cyan
-color6   #9AEDFE
-color14  #9AEDFE
+color6  #3a96dd
+color14 #61d6d6
 
 # white
-color7   #F1F1F0
-color15  #EFF0EB
+color7  #cccccc
+color15 #f2f2f2
