--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,46 +1,61 @@
 # vim:ft=kitty
 
-## name: Campbell
-## author: Microsoft
-## blurb: The default theme of Microsoft's terminals, including Windows Terminal and cmd.
+## name: GitHub Dark
+## author: GitHub
+## license: MIT
 
-# The basic colors
-foreground                      #cccccc
-background                      #0c0c0c
-selection_background            #ffffff
+#: The basic colors
 
-# Cursor colors
-cursor                          #ffffff
+foreground #c9d1d9
+background #0d1117
+selection_foreground #0d1117
+selection_background #58a6ff
 
-# The basic 16 colors
-# black
-color0 #0c0c0c
-color8 #767676
 
-# red
-color1 #c50f1f
-color9 #e74856
+#: Cursor colors
 
-# green
-color2  #13a10e
-color10 #16c60c
+cursor #58a6ff
 
-# yellow
-color3  #f19c00
-color11 #f9f1a5
 
-# blue
-color4  #0037da
-color12 #3b78ff
+#: Tab bar colors
 
-# magenta
-color5  #881798
-color13 #b4009e
+tab_bar_background #010409
+active_tab_foreground #c9d1d9
+active_tab_background #0d1117
+inactive_tab_foreground #8b949e
+inactive_tab_background #010409
 
-# cyan
-color6  #3a96dd
-color14 #61d6d6
 
-# white
-color7  #cccccc
-color15 #f2f2f2
+#: The basic 16 colors
+
+#: black
+color0 #484f58
+color8 #6e7681
+
+#: red
+color1 #ff7b72
+color9 #ffa198
+
+#: green
+color2 #3fb950
+color10 #56d364
+
+#: yellow
+color3 #d29922
+color11 #e3b341
+
+#: blue
+color4 #58a6ff
+color12 #79c0ff
+
+#: magenta
+color5 #bc8cff
+color13 #d2a8ff
+
+#: cyan
+color6 #39c5cf
+color14 #56d4dd
+
+#: white
+color7 #b1bac4
+color15 #ffffff
