--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # New Windows
 map ctrl+shift+= launch --cwd=current
 map ctrl+shift+- close_window
+map ctrl+shift+t launch --type=tab --cwd=current
 
 # Fullscreen
 map f11 toggle_fullscreen
