--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,61 +1,21 @@
-# vim:ft=kitty
-
-## name: GitHub Dark
-## author: GitHub
-## license: MIT
-
-#: The basic colors
-
-foreground #c9d1d9
-background #0d1117
-selection_foreground #0d1117
-selection_background #58a6ff
-
-
-#: Cursor colors
-
-cursor #58a6ff
-
-
-#: Tab bar colors
-
-tab_bar_background #010409
-active_tab_foreground #c9d1d9
-active_tab_background #0d1117
-inactive_tab_foreground #8b949e
-inactive_tab_background #010409
-
-
-#: The basic 16 colors
-
-#: black
-color0 #484f58
-color8 #6e7681
-
-#: red
-color1 #ff7b72
-color9 #ffa198
-
-#: green
-color2 #3fb950
-color10 #56d364
-
-#: yellow
-color3 #d29922
-color11 #e3b341
-
-#: blue
-color4 #58a6ff
-color12 #79c0ff
-
-#: magenta
-color5 #bc8cff
-color13 #d2a8ff
-
-#: cyan
-color6 #39c5cf
-color14 #56d4dd
-
-#: white
-color7 #b1bac4
-color15 #ffffff
+background            #131313
+foreground            #d6dae4
+cursor                #b9b9b9
+selection_background  #1f1f1f
+color0                #1f1f1f
+color8                #d6dae4
+color1                #f71118
+color9                #de342e
+color2                #2cc55d
+color10               #1dd260
+color3                #ecb90f
+color11               #f2bd09
+color4                #2a84d2
+color12               #0f80d5
+color5                #4e59b7
+color13               #524fb9
+color6                #0f80d5
+color14               #0f7cda
+color7                #d6dae4
+color15               #ffffff
+selection_foreground #131313
