--- a/ghostty/config
+++ b/ghostty/config
@@ -2,13 +2,16 @@ theme = enozian
 
 # Splits
 
-keybind = ctrl+shift+j=new_split:down
-keybind = ctrl+shift+k=new_split:up
-keybind = ctrl+shift+h=new_split:left
-keybind = ctrl+shift+l=new_split:right
+keybind = ctrl+shift+plus>ctrl+shift+j=new_split:down
+keybind = ctrl+shift+plus>ctrl+shift+k=new_split:up
+keybind = ctrl+shift+plus>ctrl+shift+h=new_split:left
+keybind = ctrl+shift+plus>ctrl+shift+l=new_split:right
 
-keybind = ctrl+shift+[=goto_split:left
-keybind = ctrl+shift+]=goto_split:right
+keybind = ctrl+shift+h=goto_split:left
+keybind = ctrl+shift+l=goto_split:right
+keybind = ctrl+shift+j=goto_split:bottom
+keybind = ctrl+shift+k=goto_split:top
+
 
 keybind = ctrl+left=resize_split:left,30
 keybind = ctrl+right=resize_split:right,30
