Update font size

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,6 +16,9 @@ initial_window_height 32c
 
 enable_audio_bell no
 
+#font
+font_size 12
+
 # window resizing
 map ctrl+left resize_window narrower 2
 map ctrl+right resize_window wider 2
