--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,21 @@
-# Unbind
-map ctrl+shift+u no_op
+enabled_layouts splits 
 
-# New Windows
-map ctrl+shift+= launch --cwd=current
+# Window Management
 map ctrl+shift+- close_window
 map ctrl+shift+t launch --type=tab --cwd=current
+
+## ctrl+shift+n -> direction = new window
+map ctrl+shift+n>ctrl+shift+j launch --cwd=current --location=hsplit
+map ctrl+shift+n>ctrl+shift+k combine : launch --cwd=current --location=hsplit : move_window up
+map ctrl+shift+n>ctrl+shift+l launch --cwd=current --location=vsplit
+map ctrl+shift+n>ctrl+shift+h combine : launch --cwd=current --location=vsplit : move_window left
+
+## ctrl+shift+<direction> = move to window
+map ctrl+shift+j neighboring_window down
+map ctrl+shift+k neighboring_window up
+map ctrl+shift+h neighboring_window left
+map ctrl+shift+l neighboring_window right
+
 
 # Fullscreen
 map f11 toggle_fullscreen
