Kitty window closing shortcuts

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,11 @@
 enabled_layouts splits 
 
 # Window Management
-map ctrl+shift+- close_window
 map ctrl+shift+t launch --type=tab --cwd=current
+
+## Window Closing
+map ctrl+shift+\ close_window
+
 
 ## ctrl+shift+n -> direction = new window
 map ctrl+shift+n>ctrl+shift+j launch --cwd=current --location=hsplit
