--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,11 +4,12 @@ enabled_layouts splits
 map ctrl+shift+t launch --type=tab --cwd=current
 
 ## Window Closing
-map ctrl+shift+minus close_window
-map ctrl+shift+= no_op
+map ctrl+shift+\ change_font_size all 0
+map ctrl+shift+backspace close_window
 
-map ctrl+shift+[ change_font_size all -2.0
-map ctrl+shift+] change_font_size all +2.0
+map ctrl+shift+] next_tab
+map ctrl+shift+[ previous_tab 
+
 
 ## ctrl+shift+n -> direction = new window
 map ctrl+shift+n>ctrl+shift+j launch --cwd=current --location=hsplit
