Remove ctrl+shift+w bind in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,8 @@
-enabled_layouts splits 
+map ctrl+shift+w no_op
 
 # Window Management
+enabled_layouts splits 
+
 map ctrl+shift+t launch --type=tab --cwd=current
 
 ## Window Closing
