Kitty Confirm Window

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -32,6 +32,10 @@ map f11 toggle_fullscreen
 # Tab Style
 tab_bar_style powerline
 
+# Confirm Window
+
+confirm_os_window_close 0
+
 # window layout
 remember_window_size  no
 initial_window_width  128c
