tmux instead of wezterm paning

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,3 +8,30 @@ unbind C-b
 set -g prefix C-space
 bind C-a send-prefix
 
+# Enable mouse control 
+set -g mouse on
+
+# Pane creation
+bind h split-window -h \; select-pane -L
+bind j split-window -v 
+bind k split-window -v \; select-pane -U
+bind l split-window -h
+
+# Pane movement
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Pane resize
+bind -n M-left resize-pane -L
+bind -n M-right resize-pane -R
+bind -n M-up resize-pane -U
+bind -n M-down resize-pane -D
+
+# Tabs
+bind t new-window
+bind -n M-[ previous-window
+bind -n M-] next-window
+
+
