--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal "tmux-256color"
 
 # Prefix to <C-Space>
 unbind C-b
-set -g prefix C-space
+set -g prefix C-a
 bind C-a send-prefix
 
 # Enable mouse control 
