--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,8 @@ set -g default-terminal "tmux-256color"
 
 # Prefix to <C-Space>
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # Enable mouse control 
 set -g mouse on
