--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,10 +12,10 @@ bind C-Space send-prefix
 set -g mouse on
 
 # Pane creation
-bind h split-window -h \; select-pane -L
-bind j split-window -v 
-bind k split-window -v \; select-pane -U
-bind l split-window -h
+bind h split-window -h -c "#{pane_current_path}" \; select-pane -L
+bind j split-window -v -c "#{pane_current_path}"
+bind k split-window -v -c "#{pane_current_path}" \; select-pane -U
+bind l split-window -h -c "#{pane_current_path}"
 
 # Pane movement
 bind -n M-h select-pane -L
@@ -30,7 +30,7 @@ bind -n M-up resize-pane -U
 bind -n M-down resize-pane -D
 
 # Tabs
-bind t new-window
+bind t new-window -c "#{pane_current_path}"
 bind -n M-[ previous-window
 bind -n M-] next-window
 
