--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,8 +29,13 @@ bind -n M-right resize-pane -R
 bind -n M-up resize-pane -U
 bind -n M-down resize-pane -D
 
-# Tabs
-bind t new-window -c "#{pane_current_path}"
+# Windows
+unbind p
+unbind n
+set-option -g automatic-rename on
+bind -n M-, swap-window -d -t -1
+bind -n M-. swap-window -d -t +1 
+bind -n M-p new-window -c "#{pane_current_path}"
 bind -n M-[ previous-window
 bind -n M-] next-window
 
