--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,31 +12,33 @@ bind C-Space send-prefix
 set -g mouse on
 
 # Pane creation
-bind h split-window -h -c "#{pane_current_path}" \; select-pane -L
-bind j split-window -v -c "#{pane_current_path}"
-bind k split-window -v -c "#{pane_current_path}" \; select-pane -U
-bind l split-window -h -c "#{pane_current_path}"
+
+bind -T CN C-H split-window -h -c "#{pane_current_path}" \; select-pane -L
+bind -T CN C-J split-window -v -c "#{pane_current_path}"
+bind -T CN C-K split-window -v -c "#{pane_current_path}" \; select-pane -U
+bind -T CN C-L split-window -h -c "#{pane_current_path}"
+
+bind -n -Troot C-N switch-client -T CN
+
 
 # Pane movement
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n C-H select-pane -L
+bind -n C-J select-pane -D
+bind -n C-K select-pane -U
+bind -n C-L select-pane -R
 
 # Pane resize
-bind -n M-left resize-pane -L
-bind -n M-right resize-pane -R
-bind -n M-up resize-pane -U
-bind -n M-down resize-pane -D
+bind -n C-S-left resize-pane -L
+bind -n C-S-right resize-pane -R
+bind -n C-S-up resize-pane -U
+bind -n C-S-down resize-pane -D
 
 # Windows
-unbind p
-unbind n
 set-option -g automatic-rename on
-bind -n M-, swap-window -d -t -1
-bind -n M-. swap-window -d -t +1 
-bind -n M-p new-window -c "#{pane_current_path}"
-bind -n M-[ previous-window
-bind -n M-] next-window
+bind -n C-> swap-window -d -t -1
+bind -n C-< swap-window -d -t +1 
+bind -n C-T new-window -c "#{pane_current_path}"
+bind -n C-[ previous-window
+bind -n C-] next-window
 
 
