Tmux movement works

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,7 +38,7 @@ set-option -g automatic-rename on
 bind -n C-> swap-window -d -t -1
 bind -n C-< swap-window -d -t +1 
 bind -n C-T new-window -c "#{pane_current_path}"
-bind -n C-[ previous-window
-bind -n C-] next-window
+bind -n C-{ previous-window
+bind -n C-\} next-window
 
 
