--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,7 @@ bind -n C-S-up resize-pane -U
 bind -n C-S-down resize-pane -D
 
 # Windows
+set-window-option -g window-status-current-style bg=cyan
 set-option -g automatic-rename on
 bind -n C-> swap-window -d -t -1
 bind -n C-< swap-window -d -t +1 
