--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,8 +36,8 @@ bind -n C-S-down resize-pane -D
 # Windows
 set-window-option -g window-status-current-style bg=cyan
 set-option -g automatic-rename on
-bind -n C-> swap-window -d -t -1
-bind -n C-< swap-window -d -t +1 
+bind -n C-> swap-window -d -t +1
+bind -n C-< swap-window -d -t -1 
 bind -n C-T new-window -c "#{pane_current_path}"
 bind -n C-{ previous-window
 bind -n C-\} next-window
