Disable auto-rename

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,7 +35,7 @@ bind -n C-S-down resize-pane -D
 
 # Windows
 set-window-option -g window-status-current-style bg=cyan
-set-option -g automatic-rename on
+set-option -g automatic-rename off
 bind -n C-> swap-window -d -t +1
 bind -n C-< swap-window -d -t -1 
 bind -n C-T new-window -c "#{pane_current_path}"
